# sdl2_boilerplate

./: CMakeLists.txt  README.md
src/: main.c
